--- a/project.Rmd
+++ b/project.Rmd
@@ -14,24 +14,26 @@ options(warn=-1)
 
 # Introduction
 
-Purpose of this assignmet is to investigate and compare the peredictive strength of five different machine
+Purpose of this assignmet is to investigate and compare the performance of five different machine
 learning techniques such as K-Neirest Naighbour, Desicion Trees, Boosted Desision Trees, Support Vector
 Machines and Artificial Neural Networks when applied to two distinct classification problems(distinct datasets).
-In order to fullfil the requirement, "Lending Club Dataset" from Kaggle and Adult Dataset from UCI machine leraning
-repository is utilized. 
-discover the features that are indicative	of	
-someone	paying or defaulting on their loan
+In order to fullfil the requirement, "Lending Club Dataset" from Kaggle and Adult Dataset from UCI machine
+leraning repository is utilized. 
+
+
 
 ## Lending Club Dataset
 
-Lending Club is the world’s largest online marketplace connecting borrowers and investors. It is transforming the
-banking system to make credit more affordable and investing more rewarding. Provided dataset contain complete loan
-data for all loans issued through 2007 to 2015, including the current loan status (Current, Late, Fully Paid, etc.)
-and latest payment information. 
+Lending Club is the world’s largest online marketplace connecting borrowers and investors. Provided dataset
+contain complete loan data for all loans issued through 2007 to 2015, including the current loan status(Current,
+Late, Fully Paid, etc.). In this problem, we are suppose to predicte if customer is goint to pay or default on
+their loan based on provided set of features with labels. Instances with "Current" loan status are discarded to
+make it simple binary classification problem with two labels(defaulted=0, paid=1). After cleaning and feature
+extraction, the dataset contains 15 features and 285373 samples. Only 10% of this data is used for modelling in
+order to reduce training time. 
 
 
 ## Adult Dataset
-
 
 The adult data set has over 22000 instances and 14 features of mostly cate-
 gorical variables. I did some preprocessing of the original data by discarding
